Add function reference types.